Upgrade python libraries to avoid vulnerable packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pyldap==2.4.45
-Flask==0.12.2
-gevent==1.2.2
-logstash_formatter==0.5.16
-flask-cors==3.0.3
+python-ldap==3.2.0
+Flask==1.1.1
+gevent==1.4.0
+logstash_formatter==0.5.17
+flask-cors==3.0.8
